CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - Current

general
======================
* End of support for compiling/running Cruise with JDK 1.3. New earliest supported JDK is 1.4.x.
* Replace Xalan with Saxon.
* Overhaul handling of threads, streams and logging when executing external processes.
* cruisecontrol.bat didn't work if there were spaces in JAVA_HOME (CC-554)

contrib
======================
* Update distributed CC code for refactoring in core (CC-485). Patch by Dan Rollo
* Fix bug in distributed where empty results subdirectories cause exception (CC-458). Patch by Dan Rollo
* Fix bug where distributed InteractiveBuildUtility always fails to build (CC-459). Patch by Dan Rollo
* Pass CC_OPTS in cruisecontrol.sh for distributed CC.  Patch by Dan Rollo.
* Fix bug in distributed where BuildAgent restart() and kill() never waited for build to finish (CC-517). Patch by Dan Rollo
* Fixes for windows installer (CC-505).  Patch by Julian Simpson:
  - displays README instead of RELEASENOTES
  - now with Windows service
  - backs up logs and artifacts to your Windows profile temp dir when removing
  - cleans out install dir
* packager: Based on the RpmPackager contributed earlier by Julian Simpson, but now works with rpm version 4 and also creates Debian packages. It is also done in such a way that building any other type of package should work. Contributed by Christoper Read and Julian Simpson.

build loop
======================

Accurev
----------------------
* Add fix property attribute and remove propertyOnDelete since I don't see an easy way to know if a file has been deleted.

AntBuilder
----------------------
* Add optional attribute "keepgoing" to invoke ant with -keep-going flag. Submitted by Stephen George
* Can once again use optional tasks with internal version of ant (CC-400). Patch by Frederic Mockel

bootstrappers
----------------------